--- a/app/assets/stylesheets/components/_notifications.scss
+++ b/app/assets/stylesheets/components/_notifications.scss
@@ -1,10 +1,23 @@
 .notification {
   font-size: 8px;
-  background-color: rgb(226, 36, 36);
-  color:white;
+  background-color: $red;
+  color:$white;
   border-radius: 50%;
   float:right;
   margin-bottom:-15px;
   margin-left: -30px;
   font-size: 13px;
+}
+
+.notification-online {
+  font-size: 8px;
+  background-color: $green;
+  color:$white;
+  border-radius: 50%;
+  float:right;
+  margin-bottom:0px;
+  margin-left: -10px;
+  font-size: 13px;
+  height: 2px;
+  padding: 7px;
 }
