--- a/app/views/bookings/_chatroom.html.erb
+++ b/app/views/bookings/_chatroom.html.erb
@@ -1,5 +1,6 @@
 <div class="page-frame-content">
   <div class="top-head">
+    <p class='ml-4' style="margin-bottom: 0; color: rgba(249, 250, 253, 1)"><%= current_user.nil? ? @counselor.first_name : @user.first_name %></p>
     <%= simple_form_for @booking do |f|  %>
       <%= f.hidden_field :in_session, value: false, as: :boolean %>
       <div class="top-head-button">
