--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,4 +1,4 @@
-<%= link_to 'Book a Session', new_booking_path, class: 'btn btn-primary mx-auto my-5', style: 'display: block; width: 500px' %>
+<%= link_to 'Book a Session', new_booking_path, class: 'btn btn-primary mx-auto my-5 w-100', style: 'display: block' %>
 <%= render 'recently_booked' %>
 <div class="title col-xs-8 col-sm-9 col-lg-9 mx-auto my-2" style='display: block'>
   <h3>Upcoming Session:</h3>
