Homepage basic styling

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,9 @@
 <%= render 'shared/navbar' %>
-<h3 class='ml-3 mt-3'>SOS section</h3>
+<div class="daily-report">
+  <h3>How are you feeling today?</h2>
+  <p>Record your emotion of today!</p>
+</div>
+<h3 class='sos-text mt-3 text-center'>I need help now</h3>
 <div class='sos m-3 p-4'>
   <div class='online-counselors'>
     <p style='margin-bottom: 0; margin-left: 16px'>Online counselors at your school:</p>
