--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,4 +1,10 @@
 // Specific CSS for your home-page
+.daily-report {
+  background-image: linear-gradient(45deg, #ad80fa 5%, #91b2fd 69%, #cdd0f6 98%);
+  padding: 150px 10px;
+  color: white;
+}
+
 footer {
   background-color: rgb(211, 218, 219);
   z-index: -1;
@@ -11,20 +17,37 @@ footer {
 }
 
 .online-counselors {
-  // color: $green;
+  color: white;
+
+  // text-shadow: 0 0 rgb(211, 209, 209), 0 0 rgb(211, 209, 209), 0 0 rgb(211, 209, 209), 0 -1px rgb(211, 209, 209);
   .counselor-pic img {
     border-radius: 50%;
   }
 }
 
+.sos-text {
+  background-image: linear-gradient(45deg, rgba(246, 148, 183, 1) 5%, #fa8480 69%, rgba(246, 148, 183, 1) 98%);
+  background-clip: text;
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+  font-weight: bold;
+}
+
 .sos {
   // background-color: #ad80fa;
-  background-image: linear-gradient(45deg, #ad80fa 5%, #91b2fd 69%, #cdd0f6 98%);
+  background-image: linear-gradient(45deg, rgba(246, 148, 183, 1) 5%, #fa8480 69%, rgba(246, 148, 183, 1) 98%);
   color: white;
+  box-shadow: 3px 3px 3px grey;
 }
 
 .sos-button {
-  box-shadow: 3px 3px 3px grey;
-  border-color: rgb(223, 136, 166);
-  color: white;
+  padding: 15px;
+  box-shadow: 3px 3px 3px #fa8480;
+  border-color: #fa8480;
+  color: #f55e30;
+  font-weight: bold;
+  background-color: white;
 }
