--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,8 +2,16 @@
 <div class="daily-report">
   <h3>How are you feeling today?</h2>
   <p>Record your emotion of today!</p>
+  <div class="emotions d-flex justify-content-center">
+    <i class="far fa-laugh-beam"></i>
+    <i class="far fa-smile-beam"></i>
+    <i class="far fa-meh"></i>
+    <i class="far fa-sad-tear"></i>
+    <i class="far fa-tired"></i>
+    <i class="far fa-angry"></i>
+  </div>
 </div>
-<h3 class='sos-text mt-3 text-center'>I need help now</h3>
+<h3 class='sos-text mt-3 text-center'>--- I need help now ---</h3>
 <div class='sos m-3 p-4'>
   <div class='online-counselors'>
     <p style='margin-bottom: 0; margin-left: 16px'>Online counselors at your school:</p>
