--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,8 +1,15 @@
 // Specific CSS for your home-page
 .daily-report {
   background-image: linear-gradient(45deg, #ad80fa 5%, #91b2fd 69%, #cdd0f6 98%);
-  padding: 150px 10px;
+  padding: 130px 10px;
   color: white;
+}
+
+.emotions {
+  i {
+    font-size: 35px;
+    margin: 0px 10px;
+  }
 }
 
 footer {
@@ -47,7 +54,8 @@ footer {
   padding: 15px;
   box-shadow: 3px 3px 3px #fa8480;
   border-color: #fa8480;
-  color: #f55e30;
+  color: #f07974;
   font-weight: bold;
   background-color: white;
+  border-radius: 10%;
 }
