--- a/app/assets/stylesheets/pages/_counselors_bookings.scss
+++ b/app/assets/stylesheets/pages/_counselors_bookings.scss
@@ -6,3 +6,9 @@
     margin: 10px;
   }
 }
+
+.recent-button {
+  background-image: linear-gradient(45deg, #ad80fa 5%, #91b2fd 69%, #cdd0f6 98%);
+  padding: 10px;
+  color: white;
+}
