--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,3 +1,5 @@
 // Import page-specific CSS files here.
 @import "home";
-@import "counselors_bookings"
+@import "counselors_bookings";
+@import 'students_bookings';
+@import 'student_dashboard';
