--- a/app/views/counselors/_upcoming_session.html.erb
+++ b/app/views/counselors/_upcoming_session.html.erb
@@ -1,14 +1,14 @@
 <% if @upcoming.any? %>
   <% @upcoming.each do |booking| %>
-    <div class="row mx-auto my-3 p-3 justify-content-center border border-dark">
+    <div class="session-card row mx-auto my-3 p-3 justify-content-center">
       <div class="counselor_pic col-xs-2 col-sm-3 col-lg-3 text-center">
         <%= cl_image_tag(booking.user.photo.key, height: 80, width: 80, radius: 'max', background: '#f4f4f4') %>
-        <p>with <%= booking.user.last_name %> <%= booking.user.first_name %></p>
+        <p>with <strong><%= booking.user.last_name %> <%= booking.user.first_name %></strong></p>
       </div>
       <div class="counselor_info col-xs-6 col-sm-6 col-lg-6 text-left">
         <% date = booking.start_time %>
-        <p>Date: <%= date.year %>/<%= date.month %>/<%= date.day %> <%= date.hour %>:<%= date.min == 0 ? '00' : date.min %></p>
-        <p>Mode: <%= booking.mode %></p>
+        <p><strong>Date:</strong> <%= date.year %>/<%= date.month %>/<%= date.day %> <%= date.hour %>:<%= date.min == 0 ? '00' : date.min %></p>
+        <p><strong>Mode:</strong> <%= booking.mode %></p>
       </div>
     </div>
   <% end %>
