--- a/app/assets/stylesheets/components/_counselors_new.scss
+++ b/app/assets/stylesheets/components/_counselors_new.scss
@@ -1,7 +1,7 @@
 
-.form{
+.counselors-form{
   background-image: linear-gradient(45deg, #ad80fa 5%, #91b2fd 69%, #cdd0f6 98%);
-  margin: 5em auto;
+  justify-content: center;
   padding: 5px;
   height: 600px;
    padding: 20px;
@@ -9,6 +9,7 @@
        inset 0 -3em 3em rgba(0,0,0,0.1),
             //  0 0  0 2px rgb(255,255,255),
              0.3em 0.3em 1em rgba(0,0,0,0.3);
+
  h1{
   font-family:Helvetica,Arial,sans-serif;
     font-size: 32px;
@@ -87,7 +88,8 @@ font-weight: 600;
 .new-submit-btn{
    transition-duration: 0.4s;
     background-color: $kikoe-blue;
-    border-radius: 5px;
+    border-radius: 4px;
+
 }
 .new-submit-btn:hover{
    background-color: #ad80fa;
@@ -112,7 +114,7 @@ font-weight: 600;
   color: white;
 }
 @media only screen and (max-width: 600px) {
-  body {
-    background-image: linear-gradient(45deg, #ad80fa 5%, #91b2fd 69%, #cdd0f6 98%);
-  }
+  // body {
+  //   background-image: linear-gradient(45deg, #ad80fa 5%, #91b2fd 69%, #cdd0f6 98%);
+  // }
 }
