--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,8 +1,8 @@
-<div class="mx-auto my-3" style='width: 500px'>
+<div class="mx-auto my-3">
   <h1>Book a Session</h1>
 </div>
 <%# Counselor, Time, Mode %>
-<div class="form mx-auto justify-content-center" style='width: 500px'>
+<div class="counselors-form mx-auto justify-content-center">
   <%= simple_form_for @booking do |f| %>
     <%= f.association :counselor, label: 'Counselors',
       as: :radio_buttons,
@@ -10,10 +10,13 @@
       collection_wrapper_class: 'category-wrapper d-flex',
       item_wrapper_class: 'category-counselor mx-3',
       input_html: {class: 'category-selector'},
-      collection: @counselors.map { |counselor| [cl_image_tag(counselor.photo.key, height: 80, width: 80, radius: 'max', background: '#f4f4f4'), counselor.id ] }
+      collection: @counselors.map { |counselor| [cl_image_tag(counselor.photo.key, height: 80, width: 80, radius: 'max', class: "category-counselor-img",background: '#f4f4f4'), counselor.id ] }
+  #     <div class="middle">
+  #   <div class="text">Chosen</div>
+  # </div>
     %>
-    <%= f.input :start_time, label: 'Start Time', minute_step: 30%>
-    <%= f.input :end_time, label: 'End Time', minute_step: 30 %>
+    <%= f.input :start_time, label: 'Start Time', minute_step: 30, html5: true%>
+    <%= f.input :end_time, label: 'End Time', minute_step: 30, html5: true %>
     <%= f.input :mode, label: 'Mode',
       as: :radio_buttons,
       collection_wrapper_tag: 'div',
