--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -59,3 +59,25 @@ footer {
   background-color: white;
   border-radius: 10%;
 }
+
+
+// rating
+.rating-card {
+  padding: 10px;
+  margin: 0 auto;
+  height: 250px;
+  width: 80%;
+  background-image: linear-gradient(45deg, #ad80fa 5%, #91b2fd 69%, #cdd0f6 98%);
+  box-shadow: 0px 0px 5px grey;
+  color: white;
+  img {
+    border-radius: 50%;
+  }
+  a {
+    text-align: center;
+    color: white;
+    padding: 10px 20px;
+    width: 400px;
+    margin: 0 20px;
+  }
+}
