--- a/app/assets/stylesheets/components/_counselors_new.scss
+++ b/app/assets/stylesheets/components/_counselors_new.scss
@@ -9,15 +9,23 @@
        inset 0 -3em 3em rgba(0,0,0,0.1),
             //  0 0  0 2px rgb(255,255,255),
              0.3em 0.3em 1em rgba(0,0,0,0.3);
-
- h1{
-  font-family:Helvetica,Arial,sans-serif;
-    font-size: 32px;
-    font-weight: 600;
-    line-height: 62px;
-    text-align: center;
- }
 }
+ h3{
+  font-family:Helvetica,Arial,sans-serif;
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 62px;
+  text-align: center;
+  background-image: linear-gradient(45deg, #ad80fa 5%, #91b2fd 69%, #cdd0f6 98%);
+  background-clip: text;
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+  font-weight: bold;
+
+ }
 .category-wrapper {
   display: flex;
   // justify-content: space-between;
@@ -42,9 +50,11 @@
     text-align: left;
     padding: 5px;
     border-radius: 4px;
+    color: white;
 }
 label{
    font-weight: 600;
+   color: white;
   img{
     border-radius: 50%;
     //  box-shadow:
@@ -79,6 +89,7 @@ label{
 // }
 .col-form-label {
 font-weight: 600;
+color: white;
 }
 .category-selector:checked + label {
   color: $kikoe-pink !important;
@@ -89,6 +100,8 @@ font-weight: 600;
    transition-duration: 0.4s;
     background-color: $kikoe-blue;
     border-radius: 4px;
+    color: white;
+    margin-top: 15px;
 
 }
 .new-submit-btn:hover{
@@ -101,7 +114,7 @@ font-weight: 600;
 }
 .form-check-input.is-valid ~ .form-check-label {
   transition-duration: 0.4s;
-  color: black;
+  color: white;
    background: $kikoe-blue;
    box-shadow:
        inset 0 -3em 3em rgba(0,0,0,0.1),
