--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,5 +1,6 @@
-<div class="mx-auto my-3">
-  <h1>Book a Session</h1>
+<%= render 'shared/navbar' %>
+<div class="booking-title my-3">
+  <h3>Book a Session</h3>
 </div>
 <%# Counselor, Time, Mode %>
 <div class="counselors-form mx-auto justify-content-center">
@@ -27,7 +28,7 @@
     %>
     <%= f.hidden_field :in_session, value: false, as: :boolean %>
     <%= f.hidden_field :emergency, value: false, as: :boolean %>
-    <%= f.button :submit, 'Submit', class: 'btn btn-primary' %>
+    <%= f.button :submit, 'Submit', class: 'new-submit-btn' %>
   <% end %>
 </div>
 <%= render 'shared/footer' %>
