--- a/app/assets/stylesheets/components/_counselors_new.scss
+++ b/app/assets/stylesheets/components/_counselors_new.scss
@@ -10,7 +10,7 @@
             //  0 0  0 2px rgb(255,255,255),
              0.3em 0.3em 1em rgba(0,0,0,0.3);
 }
- h3{
+ .book-a-session{
   font-family:Helvetica,Arial,sans-serif;
   font-size: 32px;
   font-weight: 600;
