--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,6 +1,6 @@
 <%= render 'shared/navbar' %>
 <div class="booking-title my-3">
-  <h3>Book a Session</h3>
+  <h3 class="book-a-session">Book a Session</h3>
 </div>
 <%# Counselor, Time, Mode %>
 <div class="counselors-form mx-auto justify-content-center">
