--- a/app/assets/stylesheets/components/_counselors_new.scss
+++ b/app/assets/stylesheets/components/_counselors_new.scss
@@ -33,6 +33,16 @@
 
 }
 
+.category-wrapper2 {
+  // justify-content: space-between;
+  flex-wrap: wrap;
+  text-align: center;
+}
+
+.card-height-315 {
+  height: 320px;
+}
+
 .category-item {
   flex: 0 0 30%;
 }
