--- a/app/views/bookings/_rating.html.erb
+++ b/app/views/bookings/_rating.html.erb
@@ -2,20 +2,20 @@
   <h2>Session has ended</h2>
 </div>
 <%# Counselor, Time, Mode %>
-<div class="rating-card">
+<div class="rating-card card-height-315">
   <div class="form mx-auto w-100 justify-content-center">
     <%= simple_form_for @booking, method: :patch do |f| %>
       <%= f.input :rating, label: 'Are you feeling better now?',
       as: :radio_buttons,
       collection_wrapper_tag: 'div',
-      collection_wrapper_class: 'category-wrapper',
+      collection_wrapper_class: 'category-wrapper2',
       item_wrapper_class: 'category-counselor',
       input_html: {class: 'category-selector', onchange: 'this.form.submit()'},
       collection: [['Very bad', 1], ['Not really', 2], ['Slightly better', 3], ['Better', 4], ['Much Better', 5]]
     %>
     <% end %>
   </div>
-  <div>
+  <div class="mt-4">
     <p><strong>Would you like to book a session?</strong></p>
     <div class="d-flex yes-button">
       <%= link_to "Yes", new_booking_path, class: 'btn btn-primary' %>
