--- a/app/views/bookings/_chatroom.html.erb
+++ b/app/views/bookings/_chatroom.html.erb
@@ -10,7 +10,8 @@
   </div>
   <%# Message body %>
   <div class="page-frame-body">
-    <div id="messages" data-booking-id="<%= @booking.id %>">
+    <%# messagesContainer %>
+    <div id="messages" data-booking-id="<%= @booking.id %>" data-user-id="<%=current_counselor&.id || current_user&.id%>">
       <div class="text-center my-2">
         <small><%= @booking.created_at.strftime("%a %b %e") %></small>
       </div>
