--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -1,2 +1,6 @@
-<h1>Users#dashboard</h1>
-<%= render 'shared/footer' %>
+<div class="page">
+  <div class="body-frame">
+    <h1>Users#dashboard</h1>
+  </div>
+  <%= render 'shared/footer' %>
+</div>
