--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,48 +1,52 @@
-<%= render 'shared/navbar' %>
-<%= link_to 'Book a Session', new_booking_path, class: 'book-button mx-auto my-5', style: 'display: block' %>
-<%= render 'recently_booked' %>
-<div class="title col-xs-8 col-sm-9 col-lg-9 mx-auto my-2" style='display: block'>
-  <h3>Upcoming Session:</h3>
-</div>
-<%# Conditional: after today's date %>
-<div class="container">
-  <% if @upcoming != [] %>
-    <%# raise %>
-    <% @upcoming.each do |booking| %>
-      <div class="session-card row mx-auto my-3 p-3 justify-content-center">
-        <div class="counselor_pic col-xs-2 col-sm-3 col-lg-3 text-center">
-          <%= cl_image_tag(booking.counselor.photo.key, height: 80, width: 80, radius: 'max', background: '#f4f4f4') %>
-          <p>with <strong><%= booking.counselor.last_name %> <%= booking.counselor.first_name %></strong></p>
-        </div>
-        <div class="counselor_info col-xs-6 col-sm-6 col-lg-6 text-left">
-          <% date = booking.start_time %>
-          <p><strong>Date:</strong> <%= date.year %>/<%= date.month %>/<%= date.day %> <%= date.hour %>:<%= date.min == 0 ? '00' : date.min %></p>
-          <p><strong>Mode:</strong> <%= booking.mode %></p>
-        </div>
-      </div>
-    <% end %>
-  <% else %>
-    <p class='ml-5'>No upcoming bookings!</p>
-  <% end %>
-</div>
-<div class="title col-xs-8 col-sm-9 col-lg-9 mx-auto my-2" style='display: block'>
-  <h3>Past Sessions:</h3>
-</div>
-<div class="container">
-  <% @past.each do |booking| %>
-    <div class="session-card row mx-auto my-3 p-3 d-flex justify-content-center">
-      <div class="counselor_pic col-xs-2 col-sm-3 col-lg-3 text-center">
-        <%= cl_image_tag(booking.counselor.photo.key, height: 80, width: 80, radius: 'max', background: '#f4f4f4') %>
-        <p>with <strong><%= booking.counselor.last_name %> <%= booking.counselor.first_name %></strong></p>
-      </div>
-      <div class="counselor_info col-xs-6 col-sm-6 col-lg-6 text-left">
-        <% date = booking.start_time %>
-        <p><strong>Date:</strong> <%= date.year %>/<%= date.month %>/<%= date.day %> <%= date.hour %>:<%= date.min == 0 ? '00' : date.min %></p>
-        <p><strong>Mode:</strong> <%= booking.mode %></p>
-      </div>
+<div class='page'>
+  <%= render 'shared/navbar' %>
+  <div class="body-frame">
+    <%= link_to 'Book a Session', new_booking_path, class: 'book-button mx-auto my-5', style: 'display: block' %>
+    <%= render 'recently_booked' %>
+    <div class="title col-xs-8 col-sm-9 col-lg-9 mx-auto my-2" style='display: block'>
+      <h3>Upcoming Session:</h3>
     </div>
-  <% end %>
+    <%# Conditional: after today's date %>
+    <div class="container">
+      <% if @upcoming != [] %>
+        <%# raise %>
+        <% @upcoming.each do |booking| %>
+          <div class="session-card row mx-auto my-3 p-3 justify-content-center">
+            <div class="counselor_pic col-xs-2 col-sm-3 col-lg-3 text-center">
+              <%= cl_image_tag(booking.counselor.photo.key, height: 80, width: 80, radius: 'max', background: '#f4f4f4') %>
+              <p>with <strong><%= booking.counselor.last_name %> <%= booking.counselor.first_name %></strong></p>
+            </div>
+            <div class="counselor_info col-xs-6 col-sm-6 col-lg-6 text-left">
+              <% date = booking.start_time %>
+              <p><strong>Date:</strong> <%= date.year %>/<%= date.month %>/<%= date.day %> <%= date.hour %>:<%= date.min == 0 ? '00' : date.min %></p>
+              <p><strong>Mode:</strong> <%= booking.mode %></p>
+            </div>
+          </div>
+        <% end %>
+      <% else %>
+        <p class='ml-5'>No upcoming bookings!</p>
+      <% end %>
+    </div>
+    <div class="title col-xs-8 col-sm-9 col-lg-9 mx-auto my-2" style='display: block'>
+      <h3>Past Sessions:</h3>
+    </div>
+    <div class="container">
+      <% @past.each do |booking| %>
+        <div class="session-card row mx-auto my-3 p-3 d-flex justify-content-center">
+          <div class="counselor_pic col-xs-2 col-sm-3 col-lg-3 text-center">
+            <%= cl_image_tag(booking.counselor.photo.key, height: 80, width: 80, radius: 'max', background: '#f4f4f4') %>
+            <p>with <strong><%= booking.counselor.last_name %> <%= booking.counselor.first_name %></strong></p>
+          </div>
+          <div class="counselor_info col-xs-6 col-sm-6 col-lg-6 text-left">
+            <% date = booking.start_time %>
+            <p><strong>Date:</strong> <%= date.year %>/<%= date.month %>/<%= date.day %> <%= date.hour %>:<%= date.min == 0 ? '00' : date.min %></p>
+            <p><strong>Mode:</strong> <%= booking.mode %></p>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  </div>
+  <%# cant stick to bottom yet %>
+  <%# render 'shared/footer' %>
+  <%= render 'shared/footer' %>
 </div>
-<%# cant stick to bottom yet %>
-<%# render 'shared/footer' %>
-<%= render 'shared/footer' %>
