--- a/app/views/counselors/bookings.html.erb
+++ b/app/views/counselors/bookings.html.erb
@@ -1,10 +1,14 @@
-<%= render 'shared/navbar' %>
-<%= render 'recently_booked' %>
-<div class="title col-xs-8 col-sm-9 col-lg-9 mx-auto my-2" style='display: block'>
-  <h3>Upcoming Session:</h3>
+<div class="page">
+  <%= render 'shared/navbar' %>
+  <div class="body-frame">
+    <%= render 'recently_booked' %>
+    <div class="title col-xs-8 col-sm-9 col-lg-9 mx-auto my-2" style='display: block'>
+      <h3>Upcoming Session:</h3>
+    </div>
+    <div class="container">
+      <%= render "counselors/upcoming_session" %>
+    </div>
+    <%= render 'past_sessions' %>
+  </div>
+  <%= render 'shared/footer_counselor' %>
 </div>
-<div class="container">
-  <%= render "counselors/upcoming_session" %>
-</div>
-<%= render 'past_sessions' %>
-<%= render 'shared/footer_counselor' %>
