--- a/app/views/bookings/_rating.html.erb
+++ b/app/views/bookings/_rating.html.erb
@@ -3,14 +3,14 @@
 </div>
 <%# Counselor, Time, Mode %>
 <div class="rating-card card-height-315">
-  <div class="form mx-auto w-100 justify-content-center">
+  <div class="form mx-auto w-100 justify-content-center text-center">
     <%= simple_form_for @booking, method: :patch do |f| %>
       <%= f.input :rating, label: 'Are you feeling better now?',
       as: :radio_buttons,
       collection_wrapper_tag: 'div',
       collection_wrapper_class: 'category-wrapper2',
       item_wrapper_class: 'category-counselor',
-      input_html: {class: 'category-selector', onchange: 'this.form.submit()'},
+      input_html: {class: 'category-selector2', onchange: 'this.form.submit()'},
       collection: [['Very bad', 1], ['Not really', 2], ['Slightly better', 3], ['Better', 4], ['Much Better', 5]]
     %>
     <% end %>
