--- a/app/views/counselors/dashboard.html.erb
+++ b/app/views/counselors/dashboard.html.erb
@@ -16,6 +16,19 @@
         </div>
       <% end %>
     <% end %>
+    <div class="chart mx-3">
+      <div class="title col-xs-8 col-sm-9 col-lg-9 mx-auto my-2" style='display: block'>
+        <h3>Weekly Report</h3>
+      </div>
+      <%= line_chart User.group_by_week(:created_at).count %>
+    </div>
+    <div class="chart mx-3">
+      <div class="title col-xs-8 col-sm-9 col-lg-9 mx-auto my-2" style='display: block'>
+        <h3>Monthly Report</h3>
+      </div>
+      <%= line_chart User.group_by_week(:created_at).count %>
+      <%= pie_chart User.group_by_week(:created_at).count %>
+    </div>
   </div>
   <%= render 'shared/footer_counselor' %>
 </div>
