--- a/app/assets/stylesheets/components/_counselors_new.scss
+++ b/app/assets/stylesheets/components/_counselors_new.scss
@@ -1,4 +1,3 @@
-
 .counselors-form{
   background-image: linear-gradient(45deg, #ad80fa 5%, #91b2fd 69%, #cdd0f6 98%);
   justify-content: center;
@@ -65,44 +64,28 @@
 label{
    font-weight: 600;
    color: white;
-  img{
-    border-radius: 50%;
-    //  box-shadow:
-    //    inset 0 -3em 3em rgba(0,0,0,0.1),
-    //          0 0  0 2px rgb(255,255,255),
-    //          0.3em 0.3em 1em rgba(0,0,0,0.3);
-    opacity: 1;
-     transition: .5s ease;
-  backface-visibility: hidden;
-  }
-  img:hover{
-     opacity: 0.3;
-  }
 }
-// raise a ticket asap tom
 
-// .middle {
-//   transition: .5s ease;
-//   opacity: 0;
-//   position: absolute;
-//   top: 50%;
-//   left: 50%;
-//   transform: translate(-50%, -50%);
-//   -ms-transform: translate(-50%, -50%);
-//   text-align: center;
-// }
-// .text {
-//   background-color: #04AA6D;
-//   color: white;
-//   font-size: 16px;
-//   padding: 16px 32px;
-// }
+.category-counselor-img {
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.category-counselor-img.selected {
+  transition: .5s;
+  box-shadow: 0 0 16px rgba(0,0,0,1);
+}
+
 .col-form-label {
 font-weight: 600;
 color: white;
 }
 .category-selector:checked + label {
   color: $kikoe-pink !important;
+  opacity: 0.7 !important;
+    box-shadow:
+       inset 0 -3em 3em rgba(185, 7, 7, 0.1),
+             0 0  0 2px $kikoe-blue,
 
 }
 //new-btn
