--- a/app/views/bookings/_rating.html.erb
+++ b/app/views/bookings/_rating.html.erb
@@ -3,23 +3,31 @@
 </div>
 <%# Counselor, Time, Mode %>
 <div class="rating-card card-height-315">
-  <div class="form mx-auto w-100 justify-content-center text-center">
-    <%= simple_form_for @booking, method: :patch do |f| %>
+  <%= simple_form_for @booking, method: :patch, html: { class: 'no-validation' } do |f| %>
+    <div class="mx-auto w-100 justify-content-center text-center">
       <%= f.input :rating, label: 'Are you feeling better now?',
       as: :radio_buttons,
       collection_wrapper_tag: 'div',
       collection_wrapper_class: 'category-wrapper2',
       item_wrapper_class: 'category-counselor',
-      input_html: {class: 'category-selector2', onchange: 'this.form.submit()'},
+      input_html: {class: 'category-selector2'},
       collection: [['Very bad', 1], ['Not really', 2], ['Slightly better', 3], ['Better', 4], ['Much Better', 5]]
     %>
-    <% end %>
-  </div>
-  <div class="mt-4">
-    <p><strong>Would you like to book a session?</strong></p>
-    <div class="d-flex yes-button">
-      <%= link_to "Yes", new_booking_path, class: 'btn btn-primary' %>
-      <%= link_to "No", root_path, class: 'btn btn-primary' %>
     </div>
-  </div>
+    <div class="mt-4">
+      <p><strong>Would you like to book a session?</strong></p>
+      <div class="d-flex yes-button">
+        <%= simple_fields_for :redirect do |o| %>
+          <%= o.input :path,
+            as: :radio_buttons,
+            collection_wrapper_tag: 'div',
+            item_wrapper_class: 'btn btn-primary',
+            collection_wrapper_class: 'd-flex',
+            input_html: {class: 'btn btn-primary', onchange: 'this.form.submit()'},
+            collection: [['Yes', new_booking_path], ['No', root_path]]
+          %>
+        <% end %>
+      </div>
+    </div>
+  <% end %>
 </div>
