made a partial for student's past session and implement some code

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,7 @@
 <div class="contact-button text-center">
-  <%= link_to "Contact?", @student_dashboard_path%>
+  <%= link_to "Contact?", @dashboard_path%> <%#<%= is this the correct path? %>
 </div>
 <%= render "student_profile" %>
+<%= render "monthly_individual_report" %> <br>
+<br>
+<%= render "past_session" %>
