--- a/app/assets/stylesheets/components/_students_session_end.scss
+++ b/app/assets/stylesheets/components/_students_session_end.scss
@@ -1,4 +1,3 @@
-
 .rating-card{
   .category-wrapper2 {
     // justify-content: space-between;
@@ -42,8 +41,14 @@
     text-align: left;
     padding: 5px;
     border-radius: 4px;
-    color: white;
     text-align: center;
+    transition-duration: 0.4s;
+    color: white;
+    background: $kikoe-blue;
+    box-shadow:
+    inset 0 -3em 3em rgba(0,0,0,0.1),
+    0 0  0 2px rgb(255,255,255),
+    0.3em 0.3em 1em rgba(0,0,0,0.3);
   }
 
   label{
@@ -63,8 +68,15 @@
     font-weight: 600;
     color: white;
   }
-  .category-selector:checked + label {
-    color: $kikoe-pink !important;
+  .category-selector2:checked + label {
+    // color: $kikoe-blue !important;
+    transition-duration: 0.4s;
+    color: white;
+    background: $kikoe-pink;
+    box-shadow:
+    inset 0 -3em 3em rgba(0,0,0,0.1),
+    0 0  0 2px rgb(255,255,255),
+    0.3em 0.3em 1em rgba(0,0,0,0.3);
 
   }
   .new-submit-btn{
@@ -90,7 +102,6 @@
     inset 0 -3em 3em rgba(0,0,0,0.1),
     0 0  0 2px rgb(255,255,255),
     0.3em 0.3em 1em rgba(0,0,0,0.3);
-
   }
   .form-check-input.is-valid ~ .form-check-label:hover {
     background-color: #ad80fa;
