enable the counselor to see the user profile and the contact opt on top as well

--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -2,5 +2,6 @@
   <div class="body-frame">
     <h1>Users#dashboard</h1>
   </div>
+  <%= render 'past_session', bookings: @past_bookings %>
   <%= render 'shared/footer' %>
 </div>
