--- a/app/views/users/_past_session.html.erb
+++ b/app/views/users/_past_session.html.erb
@@ -2,7 +2,7 @@
   <h3>*** Past Sessions ***</h3>
 </div>
 <div class="container">
-  <% @past_bookings.each do |booking| %>
+  <% bookings.each do |booking| %>
     <div class="session-card row mx-auto my-3 p-3 d-flex justify-content-center">
       <div class="counselor_pic col-xs-2 col-sm-3 col-lg-3 text-center">
         <%= cl_image_tag(booking.counselor.photo.key, height: 80, width: 80, radius: 'max', background: '#f4f4f4') %>
