--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,9 @@
-<div class="contact-button text-center">
-  <%= link_to "Contact?", @dashboard_path%> <%#<%= is this the correct path? %>
-</div>
+<% if current_counselor %>
+  <div class="contact-button text-center">
+    <button class="btn btn-primary" type="submit">Contact?</button>
+  </div>
+<% end %>
 <%= render "student_profile" %>
 <%= render "monthly_individual_report" %> <br>
 <br>
-<%= render "past_session" %>
+<%= render "past_session", bookings: @past_bookings %>
