added past-sessions on the student's dashboard

--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -1,6 +1,6 @@
 <div class="page">
   <div class="body-frame">
-    <h1>Users#dashboard</h1>
+    <%= render "past_session" %>
   </div>
   <%= render 'shared/footer' %>
 </div>
