added a note just to remember tomorrow

--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -1,6 +1,7 @@
 <div class="page">
   <div class="body-frame">
     <%= render "past_session" %>
+    <%# display a message here "counselor was worried...." %>
   </div>
   <%= render 'shared/footer' %>
 </div>
