--- a/app/views/counselors/dashboard.html.erb
+++ b/app/views/counselors/dashboard.html.erb
@@ -21,7 +21,7 @@
     </div>
     <div class="chart mx-2 my-3">
       <%= line_chart @emotions.map { |emotion| {name: emotion, data: @daily_reports.where(emotion: emotion).group_by_day_of_week(:date, format: "%a").count} },
-       xtitle: "Days of Week", ytitle: "Number of students", labels: { fontSize: 10, backgroundColor: "none", fontColor: "rgba(205, 208, 246, 1)"}, colors: ["rgba(145, 178, 253, 1)", "rgba(173, 128, 250, 1)","rgba(246, 148, 183, 1)", "rgb(131, 207, 218)"]%>
+       ytitle: 'number of students', labels: { fontSize: 10, backgroundColor: "none", fontColor: "rgba(205, 208, 246, 1)"}, colors: ["rgba(145, 178, 253, 1)", "rgba(173, 128, 250, 1)","rgba(246, 148, 183, 1)", "rgb(131, 207, 218)"]%>
     </div>
     <div class="chart mx-3 my-3">
       <%= line_chart User.first.daily_emotions.group_by_day_of_week(:date).sum(:emotion), colors: ["rgba(145, 178, 253, 1)", "rgba(173, 128, 250, 1)"] %>
@@ -29,11 +29,14 @@
     <div class="title col-xs-8 col-sm-9 col-lg-9 mx-auto my-2" style='display: block'>
       <h3>Monthly Report</h3>
     </div>
+    <%#  (all students) average mood for a month (#{mood}days + ... + #{mood}days) / number of ppl / days of month %>
+    <%# @daily_reports.where('date >= ? AND date <= ?', (Time.now - 1.month).at_beginning_of_month, (Time.now - 1.month).at_end_of_month).group(:emotion).count/User.all.count/Time.days_in_month((Time.now - 1.month).month, (Time.now - 1.month).year) %>
     <div class="chart mx-3 my-3">
-      <%= column_chart @daily_reports.where('date >= ? AND date <= ?', (Time.now - 1.month).at_beginning_of_month, (Time.now - 1.month).at_end_of_month).group(:emotion).count, colors: ["rgba(145, 178, 253, 1)", "rgba(173, 128, 250, 1)"] %>
+      <p>Average Mood of Students in <%= (Time.now - 1.month).strftime("%B") %></p>
+      <%= column_chart @daily_reports.where('date >= ? AND date <= ?', (Time.now - 1.month).at_beginning_of_month, (Time.now - 1.month).at_end_of_month).group(:emotion).count.map {|key, value| [key, (value.to_f/User.all.count/Time.days_in_month((Time.now - 1.month).month, (Time.now - 1.month).year)*100).round(2)]}.to_h, min: '0%', max: '50%', suffix: "%", colors: ["rgba(145, 178, 253, 1)", "rgba(173, 128, 250, 1)"]%>
     </div>
     <div class="chart mx-3 my-3">
-      <%= pie_chart User.first.daily_emotions.group(:emotion).count, colors: ["rgba(145, 178, 253, 1)", "rgba(173, 128, 250, 1)",'rgba(246, 148, 183, 1)', 'rgb(131, 207, 218)', 'rgba(205, 208, 246, 1)'] %>
+      <%= pie_chart @daily_reports.where('date >= ? AND date <= ?', (Time.now - 1.month).at_beginning_of_month, (Time.now - 1.month).at_end_of_month).group(:emotion).count.map {|key, value| [key, (value.to_f/User.all.count/Time.days_in_month((Time.now - 1.month).month, (Time.now - 1.month).year)*100).round(2)]}.to_h, suffix: "%", colors: ["rgba(145, 178, 253, 1)", "rgba(173, 128, 250, 1)",'rgba(246, 148, 183, 1)', 'rgb(131, 207, 218)', 'rgba(205, 208, 246, 1)'] %>
     </div>
   </div>
   <%= render 'shared/footer_counselor' %>
