--- a/app/views/counselors/dashboard.html.erb
+++ b/app/views/counselors/dashboard.html.erb
@@ -20,7 +20,7 @@
       <h3>Weekly Report</h3>
     </div>
     <div class="chart mx-2 my-3">
-      <%= line_chart @emotions.map { |emotion| {name: emotion, data: @daily_reports.where(emotion: emotion).group_by_day_of_week(:date, format: "%a").count} },
+      <%= line_chart @emotions.map { |emotion| {name: emotion, data: @daily_reports.where(emotion: emotion).where('date >= ? AND date <= ?', (Date.today - 1.week).beginning_of_week, (Date.today - 1.week).end_of_week).group_by_day_of_week(:date, format: "%a").count} },
        ytitle: 'number of students', labels: { fontSize: 10, backgroundColor: "none", fontColor: "rgba(205, 208, 246, 1)"}, colors: ["rgba(145, 178, 253, 1)", "rgba(173, 128, 250, 1)","rgba(246, 148, 183, 1)", "rgb(131, 207, 218)"]%>
     </div>
     <div class="chart mx-3 my-3">
