Fixed the contact for counselor/created a delete method/created contact_form partiazl and created the suggested booking for student

--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -1,8 +1,16 @@
 <div class="page">
   <div class="body-frame">
-    <%= render "past_session" %>
-    <%# display a message here "counselor was worried...." %>
+    <% @suggested_bookings.each do |booking| %>
+      <div class="suggested_message text-center">
+        <p>Counselor was worried about you. Do you want to book a session?</p>
+        <div class="students-choices style: 'display: block'">
+          <%= link_to 'Yes', new_booking_path, class: 'yes-button mx-auto my-5' %>
+          <%= link_to 'No', booking_path(booking),method: :delete, class: 'no-button mx-auto my-5' %>
+        </div>
+        <%# <%= link_to 'No', new_booking_path, class: 'yes-button mx-auto my-5', style: 'display: block' %>
+        <p>Counselor's name : <strong><%= booking.counselor.last_name %> <%= booking.counselor.first_name %></strong></p>
+      <% end %>
+      <%= render 'past_session', bookings: @past_bookings %>
+    </div>
+    <%= render 'shared/footer' %>
   </div>
-  <%= render 'past_session', bookings: @past_bookings %>
-  <%= render 'shared/footer' %>
-</div>
