--- a/app/views/users/_student_profile.html.erb
+++ b/app/views/users/_student_profile.html.erb
@@ -1,5 +1,5 @@
 <h3 class="profile pt-5 text-center">Student Profile</h3>
-<div class="student-profile row mx-auto my-3 p-3 justify-content-center">
+<div class="student-image row mx-auto my-3 p-3 justify-content-center">
   <%= cl_image_tag(@user.photo.key, height: 120, width: 120, radius: 'max', background: '#f4f4f4') %>
   <div class="counselor_pic col-xs-2 col-sm-3 col-lg-3 text-center">
     <p class="student-name"><strong>Student's name : </strong><%= @user.full_name %></p>
