--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,4 @@
-<% if current_counselor %>
-  <div class="contact-button text-center">
-    <button class="btn btn-primary" type="submit">Contact?</button>
-  </div>
-<% end %>
+<%= render "contact_form" %>
 <%= render "student_profile" %>
-<%= render "monthly_individual_report" %> <br>
-<br>
+<%= render "monthly_individual_report" %>
 <%= render "past_session", bookings: @past_bookings %>
