--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,22 +12,24 @@
         <i class="far fa-sad-tear"></i>
       </div>
     </div>
-    <div class="d-flex justify-content-center p-3 mx-5">
-      <div class='mx-3'>
+    <% unless current_user.nil? || current_user.emotion_today? %>
+      <div class="emotion-form">
         <%= simple_form_for @daily_emotion, remote: true do |f| %>
           <div class="mx-auto w-100 justify-content-center text-center">
             <%= f.input :emotion,
               as: :radio_buttons,
               collection_wrapper_tag: 'div',
-              collection_wrapper_class: 'category-wrapper2',
-              item_wrapper_class: 'category-counselor',
-              input_html: {class: 'category-selector2', onchange: 'this.form.submit()'},
-              collection: DailyEmotion.emotions.keys
+              collection_wrapper_class: 'category-wrapper',
+              item_wrapper_class: 'category-item',
+              input_html: {class: 'category-selector', onchange: 'this.form.submit()'},
+              collection: DailyEmotion.emotions.keys.map { |key| [sanitize('<i class="far fa-laugh-beam"></i>'), key]}
             %>
           </div>
         <% end %>
       </div>
-    </div>
+    <% else %>
+      <p>You already answerd</p>
+    <% end %>
     <h3 class='sos-text mt-3 text-center'>--- I need help now ---</h3>
     <div class='sos m-3 p-4'>
       <div class='online-counselors'>
