added style on contact btn

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -8,3 +8,6 @@
 @import "footer";
 @import "students_session_end";
 @import "forms";
+@import "counselor_rating";
+@import "counselors_new";
+@import "contact_form";
