--- a/app/views/users/_contact_form.html.erb
+++ b/app/views/users/_contact_form.html.erb
@@ -1,7 +1,9 @@
-<% if current_counselor %>
-  <%= simple_form_for @booking do |f| %>
-    <%= f.input :suggested, as: :hidden, input_html: { value: true } %>
-    <%= f.input :user_id, as: :hidden, input_html: { value: @user.id } %>
-    <%= f.button :submit, "Contact?" %>
+<div class="contact-form">
+  <% if current_counselor %>
+    <%= simple_form_for @booking do |f| %>
+      <%= f.input :suggested, as: :hidden, input_html: { value: true } %>
+      <%= f.input :user_id, as: :hidden, input_html: { value: @user.id } %>
+      <%= f.button :submit, "Contact?", class: 'contact-button tn btn btn-primary mx-2'%>
+    <% end %>
   <% end %>
-<% end %>
+</div>
