--- a/app/assets/stylesheets/components/_contact_form.scss
+++ b/app/assets/stylesheets/components/_contact_form.scss
@@ -3,6 +3,7 @@ text-align: center;
 
 .contact-button{
   margin-top: 20px;
+  margin-bottom: 10px;
  padding: 15px;
   box-shadow: 3px 3px 3px #fa8480;
   border-color: #fa8480;
