--- a/app/views/users/_monthly_individual_report.html.erb
+++ b/app/views/users/_monthly_individual_report.html.erb
@@ -1,3 +1,3 @@
 <div class="title col-xs-8 col-sm-9 col-lg-9 mx-auto my-2" style='display: block'>
-  <h3>*** Monthly Individual Report ***</h3>
+  <h3 style= "font-size:20px">***Monthly Individual Report***</h3>
 </div>
