small typo fixed

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -32,7 +32,7 @@
               input_html: {class: 'category-selector', onchange: 'this.form.submit()'},
               collection: DailyEmotion.emotions.keys.map { |key| [sanitize("<i class='#{fontawesome(key)}'></i>"), key]}
             %>
-                <p style="padding-top: 1.5rem">Today's emotion has already benn recorded</p>
+                <p style="padding-top: 1.5rem">Today's emotion has already been recorded</p>
               </div>
             <% end %>
           </div>
