render footer on stunt show page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,3 +2,4 @@
 <%= render "student_profile" %>
 <%= render "monthly_individual_report" %>
 <%= render "past_session", bookings: @past_bookings %>
+<%= render 'shared/footer' %>
