center the banner how are you feeling today

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="page">
   <%= render 'shared/navbar' %>
   <div class="body-frame">
-    <div class="daily-report">
+    <div class="daily-report row justify-content-center">
       <h3>How are you feeling today?</h2>
       <p>Record your emotion of today!</p>
       <div class="emotions d-flex justify-content-center">
