--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -28,6 +28,7 @@
 .page-frame-footer {
   background-color: #ad80fa;
   background-image: linear-gradient(45deg, #ad80fa 5%, #91b2fd 69%, #cdd0f6 98%);
+  position: sticky;
 }
 
 // chat messages
@@ -35,8 +36,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  margin: 5px 10px;
-  padding: 0 10px;
+  margin-bottom: 10px;
   width: 100%;
 }
 
@@ -56,8 +56,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin: 5px 10px;
-  padding: 0 10px;
+  margin-bottom: 10px;
   width: 100%;
 }
 
