Created charts basic structure on both counselor and student dashboard

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -15,3 +15,4 @@ $kikoe-purple: rgba(173, 128, 250, 1);
 $kikoe-pink: rgba(246, 148, 183, 1);
 $kikoe-lightblue: rgba(205, 208, 246, 1);
 $kikoe-green: rgb(131, 207, 218);
+$kikoe-red: rgb(226, 93, 93);
