--- a/app/views/users/_monthly_individual_report.html.erb
+++ b/app/views/users/_monthly_individual_report.html.erb
@@ -1,3 +1,22 @@
 <div class="title col-xs-8 col-sm-9 col-lg-9 mx-auto my-2" style='display: block'>
-  <h3 style= "font-size:20px">***Monthly Individual Report***</h3>
+  <h3>Weekly Report</h3>
+</div>
+<div class="weekly_report d-flex justify-content-center align-items-center">
+  <% @daily_reports.where('date >= ? AND date <= ?', (Time.now - 1.week).at_beginning_of_week, (Time.now - 1.week).at_end_of_week).each do |report| %>
+    <div class="date_set">
+      <i class="<%=fontawesome(report.emotion)%>"></i>
+      <p><%= report.date.strftime('%a') %></p>
+    </div>
+  <% end %>
+</div>
+<div class="title col-xs-8 col-sm-9 col-lg-9 mx-auto my-2" style='display: block'>
+  <h3>Monthly Report</h3>
+</div>
+<%#  (all students) average mood for a month (#{mood}days + ... + #{mood}days) / number of ppl / days of month %>
+<%# @daily_reports.where('date >= ? AND date <= ?', (Time.now - 1.month).at_beginning_of_month, (Time.now - 1.month).at_end_of_month).group(:emotion).count/User.all.count/Time.days_in_month((Time.now - 1.month).month, (Time.now - 1.month).year) %>
+<div class="chart mx-3 my-3">
+  <%= column_chart @daily_reports.where('date >= ? AND date <= ?', (Time.now - 1.month).at_beginning_of_month, (Time.now - 1.month).at_end_of_month).group(:emotion).count
+  .map {|key, value|[key, (value.to_f/Time.days_in_month((Time.now - 1.month).month, (Time.now - 1.month).year)*100).round(2)]}.to_h,
+   min: '0%', max: '50%', suffix: "%", colors: ["rgba(145, 178, 253, 1)", "rgba(173, 128, 250, 1)"]%>
+  <p> <%=current_user.full_name%>'s mood percentage in <%= (Time.now - 1.month).strftime("%B") %></p>
 </div>
